--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <li>Content  </li><br>
   <li><a href="index.html">Project Plan</a></li><br>
   <li><a href="index.html">SRS</a></li><br>
-  <li><a href="/images/PlaylistSyncer-UC-20-VideoDemo.mp4">Demo Video</a></li><br>
+  <li><a href="/images/PlaylistSyncer-UC-20-VideoDemo.mp4" download>Demo Video</a></li><br>
   <li><a href="index.html">Final Report</a></li><br>
   <li><a href="index.html">Source Code</a></li><p>
   
