Added Project Plan and SRS

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 <ul>
   <li>Content  </li><br>
-  <li><a href="index.html">Project Plan</a></li><br>
-  <li><a href="index.html">SRS</a></li><br>
+  <li><a href="PlaylistSyncer-ProjectPlan.pdf" download="PlaylistSyncer-ProjectPlan">Project Plan</a></li><br>
+  <li><a href="PlaylistSyncer-SRS.zip" download="PlaylistSyncer-SRS">SRS</a></li><br>
   <li><a href="PlaylistSyncer-UC-20-VideoDemo.mp4" download="PlaylistSyncer-UC-20-VideoDemo">Demo Video</a></li><br>
   <li><a href="index.html">Final Report</a></li><br>
   <li><a href="index.html">Source Code</a></li><p>
