--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <li>Content  </li><br>
   <li><a href="PlaylistSyncer-ProjectPlan.pdf" download="PlaylistSyncer-ProjectPlan">Project Plan</a></li><br>
   <li><a href="PlaylistSyncer-SRS.zip" download="PlaylistSyncer-SRS">SRS</a></li><br>
-  <li><a href="PlaylistSyncer-UC-20-VideoDemo.mp4" download="PlaylistSyncer-UC-20-VideoDemo">Demo Video</a></li><br>
-  <li><a href="index.html">Final Report</a></li><br>
+  <li><a href="PlaylistSyncer-Indy02-FinalVideoDemo.zip" download="PlaylistSyncer-Indy02-FinalVideoDemo">Demo Video</a></li><br>
+  <li><a href="Indy02-PlaylistSyncer-FinalReport.pdf" download="Indy02-PlaylistSyncer-FinalReport">>Final Report</a></li><br>
   <li><a href="PlaylistSyncer-SRC-V1.1.zip" download="PlaylistSyncer-SRC-V1.1">Source Code</a></li><p>
   
   <!-- <li><a href = "mailto: abc@example.com">Email me.</a></li><br>  -->
